--- a/style.css
+++ b/style.css
@@ -694,6 +694,10 @@ nav .social-media ul li:hover a{
     margin-top: 5%;
 }
 
+.contact-left h2{
+    color: #e6e6f3;
+}
+
 .contact-left p{
     margin-top: 5%;
     color: #e6e6f3;
