--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ nav .social-media ul li:hover a{
     width: 40%;
     margin-top: 25%;
     position: fixed;
-    z-index: 0;
+    z-index: 1;
 }
 
 .home-logo img {
@@ -237,7 +237,7 @@ nav .social-media ul li:hover a{
     padding: 80px 0;
     height: 100%;
     background-color: #d47636;
-
+    z-index: 10;
 }
 
 .row{
@@ -359,7 +359,7 @@ nav .social-media ul li:hover a{
     padding: 100px 0;
     height: 100vh;    
     background-color: #c6aed2;
-
+    z-index: 10;
 }
 
 #services .container{
@@ -673,6 +673,7 @@ nav .social-media ul li:hover a{
 #contact{
     padding: 8100px 0 20px 0;
     background-color: #221d34;
+
 }
 
 #contact .container{
@@ -792,6 +793,26 @@ form textarea{
 }
 
 
+#circle-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 0;
+}
+
+.floating-circle {
+    width: 150px;
+    height: 150px;
+    border: 10px solid #f0f0ffc4;
+    border-radius: 50%;
+    background-color: transparent;
+    position: absolute;
+    pointer-events: none; /* Ensure circles don't interfere with other elements */
+}
+
 /*------------------------small screens-----------------------*/
 
 nav .fas{
@@ -813,6 +834,11 @@ nav .fas{
     #services, #about, #websites, #games, #programs, #contact{
         padding: 50px 0;
     }
+
+    #circle-container {
+        display: none;
+    }
+
 
     .hero-image{
         display: none;
