--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     box-sizing: border-box;
 }
 
@@ -12,7 +12,7 @@ html {
 }
 
 body{
-    color: #221d34;
+    color: #e6e6f3;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -21,14 +21,13 @@ body{
 body h1{
     font-weight: 550;
     font-size: 56px;
-    color: #221d34;
+    color: #e6e6f3;
 }
 
 #home{
     display: flex;
     flex-direction: column;
-    background-color: 
-    #221d34;
+    background-color: #e6e6f3;
 
 }
 
@@ -37,6 +36,18 @@ body h1{
     position: fixed;
     z-index: -1000000;
 }
+
+.floating-circle {
+    width: 150px;
+    height: 150px;
+    border: 10px solid #d3dcdf;
+    border-radius: 50%;
+    background-color: transparent;
+    position: absolute;
+    pointer-events: none;
+    z-index: -1000;
+}
+
 
 /*--------------------------navbar-----------------------*/
 
@@ -180,7 +191,7 @@ nav .social-media ul li:hover a{
     margin-top: 30%;
     width: 100%;;
     font-size: 20px;
-    color: #d3dcdf;
+    color: #221d34;
     z-index: 100;
 }
 
@@ -198,12 +209,12 @@ nav .social-media ul li:hover a{
 
 .home-text h1{
     font-size: 60px;
-    color:#d3dcdf;
+    color:#221d34;
 }
 
 .home-text h1 span{
     font-size: 72px;
-    color: #d3dcdf;
+    color: #221d34;
 }
 
 
@@ -212,8 +223,8 @@ nav .social-media ul li:hover a{
 
 #about{
     padding: 80px 0;
-    height: 100%;
-    background-color: #e6e6f3;
+    height: 110vh;
+    background-color: #221d34;
     z-index: 10;
 }
 
@@ -262,7 +273,7 @@ nav .social-media ul li:hover a{
     margin-right: 80px;
     font-size: 24px;
     font-weight: 600;
-    color:#221d34;
+    color:#e6e6f3;
     cursor: pointer;
     position: relative;
     padding: 5px 10px;
@@ -279,7 +290,7 @@ nav .social-media ul li:hover a{
 }
 
 .skills-link.active-link{
-    color: #e6e6f3;
+    color: #221d34;
     border: 3px solid #d47636;
     background-color: #d47636;
 }
@@ -293,7 +304,7 @@ nav .social-media ul li:hover a{
 }
 
 .education-link.active-link{
-    color: #e6e6f3;
+    color: #221d34;
     border: 3px solid #c6aed2;
     background-color: #c6aed2;
 }
@@ -307,7 +318,7 @@ nav .social-media ul li:hover a{
 }
 
 .experience-link.active-link{
-    color: #e6e6f3;
+    color: #221d34;
     border: 3px solid #80c3b3;
     background-color: #80c3b3;
 }
@@ -331,7 +342,7 @@ nav .social-media ul li:hover a{
     height: 70px;
     border-radius: 50%;
     background-color: #646b89;
-    box-shadow: 3px 3px 3px 0px #6e78a5;
+    box-shadow: 0px 0px 3px 3px #6e78a5;
 }
 
 .skillcard h3{
@@ -347,7 +358,7 @@ nav .social-media ul li:hover a{
 }
 
 .tab-contents ul li span{
-    color: #221d34;
+    color: #e6e6f3;
     font-weight: 500;
     font-size: 20px;
     font-weight: 580;
@@ -366,7 +377,7 @@ nav .social-media ul li:hover a{
 #services{
     padding: 100px 0;
     height: 110vh;    
-    background-color: #221d34;
+    background-color: #e6e6f3;
     z-index: 10;
 }
 
@@ -375,7 +386,7 @@ nav .social-media ul li:hover a{
 }
 
 #services h1{
-    color: #e6e6f3;
+    color: #221d34;
     margin-bottom: 80px;
 }
 
@@ -383,7 +394,7 @@ nav .social-media ul li:hover a{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 40px;
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 .service1{
@@ -414,7 +425,6 @@ nav .social-media ul li:hover a{
     padding: 40px;
     font-size: 18px;
     font-weight: 550;
-    border-radius: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -436,12 +446,12 @@ nav .social-media ul li:hover a{
 }
 
 .services-list div:hover{
-    box-shadow: 0px 0px 5px 5px #e6e6f3;
+    box-shadow: 0px 0px 5px 5px #646b89;
     transform: scale(1.03);
 }
 
 .services-list div:hover a{
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 /*------------------------websites-----------------------*/
@@ -454,7 +464,7 @@ nav .social-media ul li:hover a{
 #websites{
     padding: 50px 0;
     height: 100vh;
-    background-color: #e6e6f3;
+    background-color: #221d34;
 }
 
 #websites .container{
@@ -479,7 +489,6 @@ nav .social-media ul li:hover a{
     align-items: center;
     padding: 30px;
     transition: transform 0.3s, box-shadow 0.3s;
-    background: #221d34;
     height: 520px;
 }
 
@@ -557,9 +566,9 @@ nav .social-media ul li:hover a{
 #games{
     padding: 50px 0;
     height: 100vh;
-    background-color: #e6e6f3;
-    border-left: solid 3px #221d34;
-    border-right: solid 3px #221d34;
+    background-color: #221d34;
+    border-left: solid 3px #e6e6f3;
+    border-right: solid 3px #e6e6f3 ;
 }
 
 #games .container{
@@ -665,7 +674,7 @@ nav .social-media ul li:hover a{
 #programs{
     padding: 50px 0;
     height: 100vh;
-    background-color: #e6e6f3;
+    background-color: #221d34;
 }
 
 #programs .container{
@@ -763,7 +772,7 @@ nav .social-media ul li:hover a{
 
 #contact{
     padding: 6800px 0 20px 0;
-    background-color: #221d34;
+    background-color: #e6e6f3;
 }
 
 #contact .container{
@@ -780,7 +789,7 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left h1{
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 .contact-right{
@@ -790,21 +799,21 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left h2{
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 .contact-left p{
     margin-top: 5%;
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 .contact-left p a{
     text-decoration: none;
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 .contact-left p i{
-    color: #e6e6f3;
+    color: #221d34;
     margin-right: 5%;
     font-size: 25px;
 }
@@ -823,7 +832,7 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left .social-media ul li a{
-    color: #e6e6f3;
+    color: #221d34;
 }
 
 .contact-left .social-media ul li:hover{
@@ -855,6 +864,11 @@ nav .social-media ul li:hover a{
 .contact-right form{
     margin-left: 10%;
     width: 90%;
+}
+
+form{
+    z-index: 0;
+
 }
 
 form input, form textarea{
@@ -897,15 +911,6 @@ form textarea{
     z-index: 0;
 }
 
-.floating-circle {
-    width: 150px;
-    height: 150px;
-    border: 10px solid #d3dcdf;
-    border-radius: 50%;
-    background-color: transparent;
-    position: absolute;
-    pointer-events: none; /* Ensure circles don't interfere with other elements */
-}
 
 /*------------------------small screens-----------------------*/
 
