--- a/style.css
+++ b/style.css
@@ -62,12 +62,11 @@ nav{
     flex-wrap: wrap;
     padding: 10px 5%;
     z-index: 1000;
-    /* background-color: #221d34; */
 }
 
 .nav-logo{
     width: 80px;
-    background-color: #d47636;
+    background-color: #e6e6f3;
     padding: 10px;
     border-radius: 40px;
 }
@@ -80,17 +79,17 @@ nav .nav-links ul li{
 }
 
 .navbar-link{
-    color: #221d34;
+    color: #1b1729;
     text-decoration: none;
     font-size: 18px;
     position: relative;
     padding: 5px 10px;
     border-radius: 25px;
-    background-color: #80c3b3;
+    background-color: #e6e6f3;
 }
 
 .navbar-link span{
-    color:#221d34;
+    color:#1b1729;
 }
 
 .navbar-link:hover{
@@ -100,8 +99,8 @@ nav .nav-links ul li{
 
 .navbar-link.active-link {
     border-radius: 25px;
-    background-color: #80c3b3;
-    color: #221d34;
+    background-color: #e6e6f3;
+    color: #1b1729;
 }
 
 .navbar-link.active-link:hover {
@@ -109,12 +108,12 @@ nav .nav-links ul li{
 }
 
 .navbar-link.active-link span{
-    color: #221d34;
+    color: #1b1729;
 }
 
 nav .social-media{
     padding: 0;
-    background-color: #c6aed2;
+    background-color: #e6e6f3;
     border-radius: 15px;
 
 }
@@ -128,7 +127,7 @@ nav .social-media ul li{
 }
 
 nav .social-media ul li a{
-    color: #221d34;
+    color: #1b1729;
 }
 
 nav .social-media ul li:hover{
@@ -149,15 +148,6 @@ nav .social-media ul li:hover a{
     flex-direction: column;
     align-items: center;
     margin-bottom: 1200px;
-}
-
-.hero-image{
-    z-index: 0;
-}
-
-.hero-image img{
-    width: 100%;
-    z-index: 0;
 }
 
 .hero-mobile{
@@ -184,6 +174,7 @@ nav .social-media ul li:hover a{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .home-text{
@@ -191,7 +182,7 @@ nav .social-media ul li:hover a{
     margin-top: 30%;
     width: 100%;;
     font-size: 20px;
-    color: #221d34;
+    color: #1b1729;
     z-index: 100;
 }
 
@@ -209,12 +200,12 @@ nav .social-media ul li:hover a{
 
 .home-text h1{
     font-size: 60px;
-    color:#221d34;
+    color:#1b1729;
 }
 
 .home-text h1 span{
     font-size: 72px;
-    color: #221d34;
+    color: #1b1729;
 }
 
 
@@ -224,7 +215,7 @@ nav .social-media ul li:hover a{
 #about{
     padding: 80px 0;
     height: 110vh;
-    background-color: #221d34;
+    background-color: #1b1729;
     z-index: 10;
 }
 
@@ -290,7 +281,7 @@ nav .social-media ul li:hover a{
 }
 
 .skills-link.active-link{
-    color: #221d34;
+    color: #1b1729;
     border: 3px solid #d47636;
     background-color: #d47636;
 }
@@ -304,7 +295,7 @@ nav .social-media ul li:hover a{
 }
 
 .education-link.active-link{
-    color: #221d34;
+    color: #1b1729;
     border: 3px solid #c6aed2;
     background-color: #c6aed2;
 }
@@ -318,7 +309,7 @@ nav .social-media ul li:hover a{
 }
 
 .experience-link.active-link{
-    color: #221d34;
+    color: #1b1729;
     border: 3px solid #80c3b3;
     background-color: #80c3b3;
 }
@@ -386,15 +377,15 @@ nav .social-media ul li:hover a{
 }
 
 #services h1{
-    color: #221d34;
+    color: #1b1729;
     margin-bottom: 80px;
 }
 
 .services-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 40px;
-    color: #221d34;
+    color: #1b1729;
 }
 
 .service1{
@@ -451,7 +442,7 @@ nav .social-media ul li:hover a{
 }
 
 .services-list div:hover a{
-    color: #221d34;
+    color: #1b1729;
 }
 
 /*------------------------websites-----------------------*/
@@ -464,7 +455,7 @@ nav .social-media ul li:hover a{
 #websites{
     padding: 50px 0;
     height: 100vh;
-    background-color: #221d34;
+    background: #1b1729;
 }
 
 #websites .container{
@@ -478,7 +469,8 @@ nav .social-media ul li:hover a{
 
 .website-list{
     display: flex;
-    grid-gap: 160px;
+    grid-gap: 200px;
+    margin-left: 20px;
 }
 
 .website{
@@ -487,7 +479,7 @@ nav .social-media ul li:hover a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
     height: 520px;
 }
@@ -512,19 +504,27 @@ nav .social-media ul li:hover a{
 
 .website img{
     width: 450px;
-    height: 250px;
+    min-height: 250px;
     display: block;
+    border-top: solid 1px #1b1729;
+    border-right: solid 1px #1b1729;
+    border-left: solid 1px #1b1729;
 }
 
 .website-description{
     width: 450px;
+    height: 100%;
+    padding: 20px;
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     text-align: center;
-    transition: height 0.5s;
+    color: #1b1729;
+    background: #e6e6f3;
+    border-bottom: solid 1px #1b1729;
+    border-right: solid 1px #1b1729;
+    border-left: solid 1px #1b1729;
 }
 
 .website-description h2{
@@ -539,17 +539,17 @@ nav .social-media ul li:hover a{
 
 .website-description .buttons{
     position: absolute;
-    bottom: 30px;
+    bottom: 50px;
     display: flex;
 }
 
 .website-description .buttons a{
     margin: 0 20px;
-    color: #221d34;
+    color: #1b1729;
     text-decoration: none;
     font-size: 32px;
     line-height: 60px;
-    background: #f0f0ffc4;
+    background: #b1b1c2c4;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -595,7 +595,7 @@ nav .social-media ul li:hover a{
 #games{
     padding: 50px 0;
     height: 100vh;
-    background-color: #221d34;
+    background-color: #1b1729;
     border-left: solid 3px #e6e6f3;
     border-right: solid 3px #e6e6f3 ;
 }
@@ -611,7 +611,8 @@ nav .social-media ul li:hover a{
 
 .game-list{
     display: flex;
-    grid-gap: 160px;
+    grid-gap: 200px;
+    margin-left: 20px;
 }
 
 .game{
@@ -620,7 +621,7 @@ nav .social-media ul li:hover a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
     height: 520px;
 }
@@ -648,20 +649,28 @@ nav .social-media ul li:hover a{
 }
 
 .game video{
-    width: 450px;
-    height: 250px;
+    max-width: 450px;
     display: block;
+    border-top: solid 1px #1b1729;
+    border-right: solid 1px #1b1729;
+    border-left: solid 1px #1b1729;
 }
 
 .game-description{
     width: 450px;
+    height: 100%;
+    padding: 20px;
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     text-align: center;
     transition: height 0.5s;
+    color: #1b1729;
+    background: #e6e6f3;
+    border-bottom: solid 1px #1b1729;
+    border-right: solid 1px #1b1729;
+    border-left: solid 1px #1b1729;
 }
 
 .game-description h2{
@@ -676,17 +685,17 @@ nav .social-media ul li:hover a{
 
 .game-description .buttons{
     position: absolute;
-    bottom: 30px;
+    bottom: 50px;
     display: flex;
 }
 
 .game-description .buttons a{
     margin: 0 20px;
-    color: #221d34;
+    color: #1b1729;
     text-decoration: none;
     font-size: 32px;
     line-height: 60px;
-    background: #f0f0ffc4;
+    background: #b1b1c2c4;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -733,7 +742,7 @@ nav .social-media ul li:hover a{
 #programs{
     padding: 50px 0;
     height: 100vh;
-    background-color: #221d34;
+    background-color: #1b1729;
 }
 
 #programs .container{
@@ -747,7 +756,8 @@ nav .social-media ul li:hover a{
 
 .program-list{
     display: flex;
-    grid-gap: 160px;
+    grid-gap: 200px;
+    margin-left: 20px;
 }
 
 .program{
@@ -756,7 +766,7 @@ nav .social-media ul li:hover a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
     height: 520px;
 }
@@ -781,19 +791,27 @@ nav .social-media ul li:hover a{
 
 .program img{
     width: 450px;
-    height: 250px;
+    min-height: 250px;
     display: block;
+    border-top: solid 1px #1b1729;
+    border-right: solid 1px #1b1729;
+    border-left: solid 1px #1b1729;
 }
 
 .program-description{
     width: 450px;
+    height: 100%;
+    padding: 20px;
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     text-align: center;
-    transition: height 0.5s;
+    color: #1b1729;
+    background: #e6e6f3;
+    border-bottom: solid 1px #1b1729;
+    border-right: solid 1px #1b1729;
+    border-left: solid 1px #1b1729;
 }
 
 .program-description h2{
@@ -808,12 +826,12 @@ nav .social-media ul li:hover a{
 
 .program-description a{
     position: absolute;
-    bottom: 30px;
-    color: #221d34;
+    bottom: 50px;
+    color: #1b1729;
     text-decoration: none;
     font-size: 32px;
     line-height: 60px;
-    background: #f0f0ffc4;
+    background: #b1b1c2c4;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -858,7 +876,7 @@ nav .social-media ul li:hover a{
 /*------------------------contact-----------------------*/
 
 #contact{
-    padding: 6800px 0 20px 0;
+    padding: 8300px 0 20px 0;
     background-color: #e6e6f3;
 }
 
@@ -876,7 +894,7 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left h1{
-    color: #221d34;
+    color: #1b1729;
 }
 
 .contact-right{
@@ -886,21 +904,21 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left h2{
-    color: #221d34;
+    color: #1b1729;
 }
 
 .contact-left p{
     margin-top: 5%;
-    color: #221d34;
+    color: #1b1729;
 }
 
 .contact-left p a{
     text-decoration: none;
-    color: #221d34;
+    color: #1b1729;
 }
 
 .contact-left p i{
-    color: #221d34;
+    color: #1b1729;
     margin-right: 5%;
     font-size: 25px;
 }
@@ -919,7 +937,7 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left .social-media ul li a{
-    color: #221d34;
+    color: #1b1729;
 }
 
 .contact-left .social-media ul li:hover{
@@ -939,7 +957,7 @@ nav .social-media ul li:hover a{
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
-    color:#221d34;
+    color:#1b1729;
     transition: background 0.3s;
     font-size: 16px;
 }
@@ -1026,7 +1044,7 @@ nav .fas{
     }
 
 
-    .hero-image{
+    .hero-image, .home-logo, .home-text{
         display: none;
     }
 
@@ -1039,19 +1057,9 @@ nav .fas{
         width: 100%;
     }
 
-
-    .home-logo{
-        display: none;
-    }
-
-    .home-text{
-        display: none;
-    }
-
     .home{
         margin-bottom: 200px;
     }
-
 
     nav .fas{
         display: block;
@@ -1088,20 +1096,20 @@ nav .fas{
     .navbar-link{
         display: block;
         margin: 10px 0px 10px 20px;
-        color: #221d34;
+        color: #1b1729;
     }
 
     .navbar-link i{
-        color: #221d34;
+        color: #1b1729;
     }
 
     .navbar-link.active-link {
         background-color: #80c3b3;
-        color: #221d34;
+        color: #1b1729;
     }
     
     .navbar-link.active-link i{
-        color: #221d34;
+        color: #1b1729;
     }
 
     .row{
@@ -1112,6 +1120,11 @@ nav .fas{
         margin: 10% 0 10% 10%;
     }
 
+    .services-list{
+        display: flex;
+        flex-direction: column;
+        color: #1b1729;
+    }    
         
     #my-work{
         flex-direction: column;
@@ -1129,17 +1142,19 @@ nav .fas{
     }
 
     #websites .container, #games .container, #programs .container{
-        height: 100%;
         width: 100%;
     }
     
     #websites .container img, #programs .container img{
         max-width: 100%;
-        height: auto;
     }
 
     #games{
         border: none;
+    }
+
+    .websitesDates, .gamesDates, .programsDates, #websitesProgressBar, #gamesProgressBar, #programsProgressBar{
+        display: none;
     }
 
 }
@@ -1182,11 +1197,6 @@ nav .fas{
         font-size: 40px;
     }
 
-    body img{
-        max-width: 100%;
-        height: auto;
-    }
-
     .about-col-1, .about-col-2{
         flex-basis: 100%;
     }
@@ -1205,7 +1215,7 @@ nav .fas{
     }
 
     .services-list div{
-        max-width: 90%;
+        max-width: 100%;
     }
 
     .contact-left, .contact-right{
@@ -1224,17 +1234,31 @@ nav .fas{
 
     .website, .game, .program{
         width: 350px;
-        height: 400px
+        height: 440px;
     }
 
     .website-description, .game-description, .program-description{
-        width: 320px;
+        width: 330px;
     }
 
     .game video{
-        width: 100%;
-        height: auto;
+        width: 330px;
     }
 
+    .website img, .program img{
+        min-height: 200px;
+    }
+
+    .website-description .buttons, .game-description .buttons, .program-description a{
+        bottom: 20px;
+    }
+    
+    .website-description .buttons a, .game-description .buttons a, .program-description a{
+        margin: 0 20px;
+        font-size: 24px;
+        line-height: 40px;
+        width: 40px;
+        height: 40px;
+    }
 
 }
