--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body{
-    color: #e6e6f3;
+    color: #e2e2f8;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -21,13 +21,13 @@ body{
 body h1{
     font-weight: 550;
     font-size: 56px;
-    color: #e6e6f3;
+    color: #e2e2f8;
 }
 
 #home{
     display: flex;
     flex-direction: column;
-    background-color: #e6e6f3;
+    background: #e6e6f3;
 
 }
 
@@ -42,7 +42,7 @@ body h1{
     height: 150px;
     border: 10px solid #d3dcdf;
     border-radius: 50%;
-    background-color: transparent;
+    background: transparent;
     position: absolute;
     pointer-events: none;
     z-index: -1000;
@@ -66,7 +66,7 @@ nav{
 
 .nav-logo{
     width: 80px;
-    background-color: #e6e6f3;
+    background: #e6e6f3;
     padding: 10px;
     border-radius: 40px;
 }
@@ -85,7 +85,7 @@ nav .nav-links ul li{
     position: relative;
     padding: 5px 10px;
     border-radius: 25px;
-    background-color: #e6e6f3;
+    background: #e6e6f3;
 }
 
 .navbar-link span{
@@ -99,7 +99,7 @@ nav .nav-links ul li{
 
 .navbar-link.active-link {
     border-radius: 25px;
-    background-color: #e6e6f3;
+    background: #e6e6f3;
     color: #1b1729;
 }
 
@@ -113,7 +113,7 @@ nav .nav-links ul li{
 
 nav .social-media{
     padding: 0;
-    background-color: #e6e6f3;
+    background: #e6e6f3;
     border-radius: 15px;
 
 }
@@ -215,7 +215,7 @@ nav .social-media ul li:hover a{
 #about{
     padding: 80px 0;
     height: 110vh;
-    background-color: #1b1729;
+    background: #1b1729;
     z-index: 10;
 }
 
@@ -264,7 +264,7 @@ nav .social-media ul li:hover a{
     margin-right: 80px;
     font-size: 24px;
     font-weight: 600;
-    color:#e6e6f3;
+    color:#e2e2f8;
     cursor: pointer;
     position: relative;
     padding: 5px 10px;
@@ -283,7 +283,7 @@ nav .social-media ul li:hover a{
 .skills-link.active-link{
     color: #1b1729;
     border: 3px solid #d47636;
-    background-color: #d47636;
+    background: #d47636;
 }
 
 .education-link{
@@ -297,7 +297,7 @@ nav .social-media ul li:hover a{
 .education-link.active-link{
     color: #1b1729;
     border: 3px solid #c6aed2;
-    background-color: #c6aed2;
+    background: #c6aed2;
 }
 
 .experience-link{
@@ -311,7 +311,7 @@ nav .social-media ul li:hover a{
 .experience-link.active-link{
     color: #1b1729;
     border: 3px solid #80c3b3;
-    background-color: #80c3b3;
+    background: #80c3b3;
 }
 
 .tab-contents.skills.active-tab{
@@ -332,7 +332,7 @@ nav .social-media ul li:hover a{
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    background-color: #646b89;
+    background: #646b89;
     box-shadow: 0px 0px 3px 3px #6e78a5;
 }
 
@@ -349,7 +349,7 @@ nav .social-media ul li:hover a{
 }
 
 .tab-contents ul li span{
-    color: #e6e6f3;
+    color: #e2e2f8;
     font-weight: 500;
     font-size: 20px;
     font-weight: 580;
@@ -368,7 +368,7 @@ nav .social-media ul li:hover a{
 #services{
     padding: 100px 0;
     height: 110vh;    
-    background-color: #e6e6f3;
+    background: #e6e6f3;
     z-index: 10;
 }
 
@@ -521,7 +521,7 @@ nav .social-media ul li:hover a{
     flex-direction: column;
     text-align: center;
     color: #1b1729;
-    background: #e6e6f3;
+    background: #e2e2f8;
     border-bottom: solid 1px #1b1729;
     border-right: solid 1px #1b1729;
     border-left: solid 1px #1b1729;
@@ -587,7 +587,7 @@ nav .social-media ul li:hover a{
     left: 365px;
     height: 3px;
     width: 0;
-    background-color: #e6e6f3;
+    background: #e2e2f8;
 }
 
 
@@ -595,9 +595,9 @@ nav .social-media ul li:hover a{
 #games{
     padding: 50px 0;
     height: 100vh;
-    background-color: #1b1729;
-    border-left: solid 3px #e6e6f3;
-    border-right: solid 3px #e6e6f3 ;
+    background: #1b1729;
+    border-left: solid 3px #e2e2f8;
+    border-right: solid 3px #e2e2f8 ;
 }
 
 #games .container{
@@ -667,7 +667,7 @@ nav .social-media ul li:hover a{
     text-align: center;
     transition: height 0.5s;
     color: #1b1729;
-    background: #e6e6f3;
+    background: #e2e2f8;
     border-bottom: solid 1px #1b1729;
     border-right: solid 1px #1b1729;
     border-left: solid 1px #1b1729;
@@ -732,7 +732,7 @@ nav .social-media ul li:hover a{
     left: 2602px;
     height: 3px;
     width: 0;
-    background-color: #e6e6f3;
+    background: #e2e2f8;
 }
 
 
@@ -742,7 +742,7 @@ nav .social-media ul li:hover a{
 #programs{
     padding: 50px 0;
     height: 100vh;
-    background-color: #1b1729;
+    background: #1b1729;
 }
 
 #programs .container{
@@ -808,7 +808,7 @@ nav .social-media ul li:hover a{
     flex-direction: column;
     text-align: center;
     color: #1b1729;
-    background: #e6e6f3;
+    background: #e2e2f8;
     border-bottom: solid 1px #1b1729;
     border-right: solid 1px #1b1729;
     border-left: solid 1px #1b1729;
@@ -867,7 +867,7 @@ nav .social-media ul li:hover a{
     bottom: 148px;
     left: 5471px;
     height: 3px;
-    background-color: #e6e6f3;
+    background: #e2e2f8;
 }
 
 
@@ -877,7 +877,7 @@ nav .social-media ul li:hover a{
 
 #contact{
     padding: 8300px 0 20px 0;
-    background-color: #e6e6f3;
+    background: #e6e6f3;
 }
 
 #contact .container{
@@ -889,8 +889,13 @@ nav .social-media ul li:hover a{
 }
 
 .contact-left{
-    flex-basis: 35%;
-    padding-left: 6%;
+    flex-basis: 30%;
+    margin-left: 6%;
+    background: #e2e2f8;
+    padding: 60px;
+    z-index: 100;
+    border: solid 10px #d47636;
+
 }
 
 .contact-left h1{
@@ -898,9 +903,9 @@ nav .social-media ul li:hover a{
 }
 
 .contact-right{
+    background: #e2e2f8;
+    border: solid 10px #c6aed2;
     flex-basis: 60%;
-    margin-right: 5%;
-    margin-top: 5%;
 }
 
 .contact-left h2{
@@ -952,7 +957,7 @@ nav .social-media ul li:hover a{
     display: block;
     margin-bottom: 5%;
     width: fit-content;
-    background-color: #80c3b3;
+    background: #80c3b3;
     border: 1px solid #646b89;
     padding: 14px 50px;
     border-radius: 6px;
@@ -966,14 +971,12 @@ nav .social-media ul li:hover a{
     background: #d47636;
 }
 
-.contact-right form{
-    margin-left: 10%;
-    width: 90%;
+.contact-right{
+    z-index: 10;
 }
 
-form{
-    z-index: 0;
-
+.contact-right form{
+    padding: 30px;
 }
 
 form input, form textarea{
@@ -997,8 +1000,7 @@ form textarea{
     width: 100%;
     text-align: center;
     padding: 50px 0;
-    background: #646b89;
-    z-index: -30;
+    background: #80c3b3;
 }
 
 .copyright p{
@@ -1024,7 +1026,7 @@ nav .fas{
 }
 
 
-@media screen and (max-width: 1450px){
+@media screen and (max-width: 1400px){
 
     body{
         width: 100%;
@@ -1104,7 +1106,7 @@ nav .fas{
     }
 
     .navbar-link.active-link {
-        background-color: #80c3b3;
+        background: #80c3b3;
         color: #1b1729;
     }
     
